--- a/index-copy.html
+++ b/index-copy.html
@@ -536,17 +536,17 @@
           class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-4 rounded-lg font-bold text-lg transition-all duration-300 transform hover:-translate-y-1 hover:shadow-lg flex items-center justify-center gap-3 text-decoration-none"
         >
           <i class="fab fa-discord text-xl" aria-hidden="true"></i>
-          Join Main Discord
+          Join Code Crunch & Hackathon Discord 
         </a>
         <a
           id="cert-groupme-link"
           href="https://codecrunchglobal-groupme.vercel.app/"
           target="_blank"
           rel="noopener noreferrer"
-          class="bg-orange-500 hover:bg-orange-600 text-white px-6 py-4 rounded-lg font-bold text-lg transition-all duration-300 transform hover:-translate-y-1 hover:shadow-lg flex items-center justify-center gap-3 text-decoration-none"
+          class="bg-green-600 hover:bg-orange-600 text-white px-6 py-4 rounded-lg font-bold text-lg transition-all duration-300 transform hover:-translate-y-1 hover:shadow-lg flex items-center justify-center gap-3 text-decoration-none"
         >
           <i class="fas fa-users text-xl" aria-hidden="true"></i>
-          Join Main GroupMe
+          Join Code Crunch & Hackathon GroupMe
         </a>
       </div>
 
@@ -585,7 +585,7 @@
                 href="https://go.fiu.edu/cahsiatfiu"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="bg-teal-600 hover:bg-teal-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
+                class="bg-purple-600 hover:bg-teal-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
               >
                 <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
               </a>
@@ -593,7 +593,7 @@
                 href="https://go.fiu.edu/cahsiatfiu"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="bg-cyan-500 hover:bg-cyan-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
+                class="bg-blue-500 hover:bg-cyan-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
               >
                 <i class="fas fa-users text-sm" aria-hidden="true"></i>GroupMe
               </a>
@@ -608,7 +608,7 @@
                 href="#"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="bg-red-600 hover:bg-red-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
+                class="bg-purple-600 hover:bg-red-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
               >
                 <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
               </a>
@@ -616,7 +616,7 @@
                 href="#"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="bg-green-500 hover:bg-green-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
+                class="bg-blue-500 hover:bg-green-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
               >
                 <i class="fas fa-users text-sm" aria-hidden="true"></i>GroupMe
               </a>
@@ -631,7 +631,7 @@
                 href="#"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="bg-pink-600 hover:bg-pink-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
+                class="bg-purple-600 hover:bg-pink-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
               >
                 <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
               </a>
@@ -639,7 +639,7 @@
                 href="#"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="bg-rose-500 hover:bg-rose-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
+                class="bg-blue-500 hover:bg-rose-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
               >
                 <i class="fas fa-users text-sm" aria-hidden="true"></i>GroupMe
               </a>
