--- a/all-eboard.html
+++ b/all-eboard.html
@@ -499,7 +499,7 @@
             <!-- Apply Now CTA -->
             <div class="text-center py-8 mb-16">
                 <h2 class="text-3xl font-bold mb-8 cc-blue-text">Ready to Make an Impact?</h2>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeI2gj9ydj19ihmJ0o5FgpP1SlewicDOeZUeKQaJu810wXyQg/viewform?usp=sharing" 
+                <a href="https://hackuniversityform-no1.vercel.app/" 
                    target="_blank" 
                    class="inline-block cc-orange text-white font-bold px-10 py-4 rounded-md shadow-lg hover:bg-yellow-600 transition duration-300 pulse-button text-xl">
                     Apply Now
