--- a/hackathons-discord.html
+++ b/hackathons-discord.html
@@ -169,7 +169,7 @@
             <h5 class="font-semibold text-gray-700 mb-2 text-sm">ColorStack at FIU</h5>
             <div class="flex gap-2 justify-center">
               <a
-                href="https://go.fiu.edu/colorstackatfiu"
+                href="https://codecrunchglobal-discordserver.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-purple-600 hover:bg-purple-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -177,7 +177,7 @@
                 <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
               </a>
               <a
-                href="https://go.fiu.edu/colorstackatfiu"
+                href="https://codecrunchglobal-discordserver.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-blue-500 hover:bg-blue-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -192,7 +192,7 @@
             <h5 class="font-semibold text-gray-700 mb-2 text-sm">CAHSI at FIU</h5>
             <div class="flex gap-2 justify-center">
               <a
-                href="https://go.fiu.edu/cahsiatfiu"
+                href="https://codecrunchglobal-discordserver.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-purple-600 hover:bg-teal-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -200,7 +200,7 @@
                 <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
               </a>
               <a
-                href="https://go.fiu.edu/cahsiatfiu"
+                href="https://codecrunchglobal-discordserver.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-blue-500 hover:bg-cyan-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -215,7 +215,7 @@
             <h5 class="font-semibold text-gray-700 mb-2 text-sm">GDG at FIU</h5>
             <div class="flex gap-2 justify-center">
               <a
-                href="#"
+                href="https://codecrunchglobal-discordserver.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-purple-600 hover:bg-red-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -223,7 +223,7 @@
                 <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
               </a>
               <a
-                href="#"
+                href="https://codecrunchglobal-discordserver.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-blue-500 hover:bg-green-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -238,7 +238,7 @@
             <h5 class="font-semibold text-gray-700 mb-2 text-sm">Raspberry Pi Code Crunch</h5>
             <div class="flex gap-2 justify-center">
               <a
-                href="#"
+                href="https://codecrunchglobal-discordserver.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-purple-600 hover:bg-pink-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -246,7 +246,7 @@
                 <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
               </a>
               <a
-                href="#"
+                href="https://codecrunchglobal-discordserver.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-blue-500 hover:bg-rose-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
