--- a/hackathons-discord.html
+++ b/hackathons-discord.html
@@ -31,7 +31,7 @@
 <section id="membership-certificate" class="py-16 bg-white">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <h2 class="text-3xl font-bold mb-8 text-center">
-      Membership Certificate, Hackathons & Organization Discords | Join us!
+      Membership Certificate, Hackathons & Organization Discords, and Executive Board application | Join us!
       <span class="star inline-block align-[-0.2em]" aria-hidden="true">✨</span>
     </h2>
 
@@ -39,7 +39,7 @@
     <div class="bg-gradient-to-r from-blue-500 to-blue-700 rounded-lg shadow-lg p-8 text-white mb-8">
       <div class="text-center">
         <p class="text-xl leading-relaxed">
-          <strong>Join our Discord community and GroupMe chat, get your official membership certificate!</strong>
+          <strong>Join our Discord community and GroupMe chat, get your official membership certificate! or want to become a part of the Executive Board?</strong>
           Not a member yet or haven't registered for our interdisciplinary hackathons?
           <strong>Become a member and register here - all in one single form below.</strong>
           Already a member? Simply enter your email to generate your certificate and access all community platforms instantly.
@@ -54,7 +54,7 @@
           <div class="w-16 h-16 cc-orange rounded-lg mx-auto mb-4 flex items-center justify-center">
             <i class="fas fa-user-plus text-2xl text-white" aria-hidden="true"></i>
           </div>
-          <h3 class="text-2xl font-bold cc-blue-text mb-3">New Member Registration</h3>
+          <h3 class="text-2xl font-bold cc-blue-text mb-3">New Member & Hackathon Participant Registration</h3>
         </div>
 
         <div class="text-center">
@@ -77,7 +77,7 @@
           <div class="w-16 h-16 cc-blue rounded-lg mx-auto mb-4 flex items-center justify-center">
             <i class="fas fa-certificate text-2xl text-white" aria-hidden="true"></i>
           </div>
-          <h3 class="text-2xl font-bold cc-blue-text mb-3">Existing Members</h3>
+          <h3 class="text-2xl font-bold cc-blue-text mb-3">Existing Members & Hackathon Participants</h3>
         </div>
 
         <!-- Certificate Generation Form -->
