--- a/index.html
+++ b/index.html
@@ -417,9 +417,14 @@
 
 
 
-<!-- <Membership & Certificate Section> -->
-
-    <div class="grid lg:grid-cols-2 gap-8">
+<!-- Membership & Certificate Section -->
+<section id="membership-certificate" class="py-16 bg-white" aria-labelledby="membership-certificate-heading">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <h2 id="membership-certificate-heading" class="text-3xl font-bold mb-8 text-center cc-blue-text">
+            Membership & Certificate <span class="star"></span>
+        </h2>
+        
+        <div class="grid lg:grid-cols-2 gap-8">
       <!-- New Member Registration -->
       <div class="bg-gray-50 rounded-lg p-8 shadow-md">
         <div class="text-center mb-6">
