--- a/hackathons-discord.html
+++ b/hackathons-discord.html
@@ -142,11 +142,11 @@
 
 
 
+<section id="membership-certificate" class="py-16 bg-white">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <!-- All your content including the grid goes here -->
+    <div class="grid lg:grid-cols-2 gap-8 mb-8">
 
-
-<!-- <Membership & Certificate Section> -->
-
-    <div class="grid lg:grid-cols-2 gap-8">
       <!-- New Member Registration -->
       <div class="bg-gray-50 rounded-lg p-8 shadow-md">
         <div class="text-center mb-6">
