--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
 
         <div class="text-center">
           <a
-            href="https://hackuniversityregistration.vercel.app/"
+            href="https://hackuniversitydiscord.vercel.app/"
             class="inline-block w-full cc-orange cc-blue-text px-8 py-4 rounded-md hover:bg-yellow-400 transition-colors font-bold text-lg text-decoration-none"
             rel="noopener noreferrer"
            >
