--- a/hackathons-discord.html
+++ b/hackathons-discord.html
@@ -117,7 +117,7 @@
           </div>
           <div>
             <h4 class="font-bold mb-2">🏆 Existing Members</h4>
-            <p class="text-blue-100">Get your official membership certificates for your resume and instant access to all community platforms.</p>
+            <p class="text-blue-100">Get your official membership certificates for your resume and instant access to all community platforms [Discord and GroupMe].</p>
           </div>
         </div>
       </div>
