--- a/hackathons-discord.html
+++ b/hackathons-discord.html
@@ -189,10 +189,17 @@
             <span class="text-green-500 text-lg">🎯</span>
             <span class="text-sm text-gray-700">Membership in all 5 organizations</span>
           </div>
-          <div class="flex items-center space-x-2">
-            <span class="text-green-500 text-lg">🏅</span>
-            <span class="text-sm text-gray-700">Access to 7 annual hackathons</span>
+
+          <div class="flex flex-col space-y-1">
+            <div class="flex items-center space-x-2">
+              <span class="text-green-500 text-lg">🏅</span>
+              <span class="text-sm text-gray-700">Register for 7 annual hackathons</span>
+            </div>
+            <span class="text-xs text-red-500 font-bold">
+              ** If you forgot to register for a hack, you must resubmit the form to make sure your registration for that specific hack is counted.
+            </span>
           </div>
+          
           <div class="flex items-center space-x-2">
             <span class="text-green-500 text-lg">👥</span>
             <span class="text-sm text-gray-700">Discord, GroupMe & IG community access</span>
