--- a/hackathons-discord.html
+++ b/hackathons-discord.html
@@ -142,8 +142,13 @@
               ** If you forgot to register for a hack, you must resubmit the form to make sure your registration for that specific hack is counted.
             </span>
           </div>
+
+            <div class="flex items-center space-x-2">
+            <span class="text-green-500 text-lg">⭐</span>
+            <span class="text-sm text-gray-700">Executive Board application eligibility</span>
+          </div>
           
-          <div class="flex items-center space-x-2">
+          <!-- <div class="flex items-center space-x-2">
             <span class="text-green-500 text-lg">👥</span>
             <span class="text-sm text-gray-700">Discord, GroupMe & IG community access</span>
           </div>
@@ -154,7 +159,9 @@
           <div class="flex items-center space-x-2">
             <span class="text-green-500 text-lg">📜</span>
             <span class="text-sm text-gray-700">Official membership certificates</span>
-          </div>
+          </div> -->
+
+
         </div>
 
 
@@ -180,8 +187,32 @@
             <i class="fas fa-certificate text-2xl text-white" aria-hidden="true"></i>
           </div>
           <h3 class="text-2xl font-bold cc-blue-text mb-3">Existing Members & Hackathon Participants</h3>
-        <p class="text-blue-700 mb-4">Get your certificates and community links instantly</p>
+        <p class="text-blue-700 mb-4">Get your Membership certificates and community platforms instantly</p>
         </div>
+
+
+
+      <!-- Benefits List -->
+          <div class="mb-6 space-y-2"></div>
+          <div class="flex items-center space-x-2">
+            <span class="text-green-500 text-lg">👥</span>
+            <span class="text-sm text-gray-700">Discord, GroupMe & IG community access</span>
+          </div>
+
+          <div class="flex items-center space-x-2">
+            <span class="text-green-500 text-lg">📜</span>
+            <span class="text-sm text-gray-700">Official membership certificates</span>
+          </div>
+        </div>
+
+
+
+
+
+
+
+
+
 
         <!-- Certificate Generation Form -->
         <form class="space-y-4" id="cert-form" novalidate>
