--- a/home.html
+++ b/home.html
@@ -507,18 +507,18 @@
             </span>
             </div>
 
-          <div class="flex items-center space-x-2">
+          <!-- <div class="flex items-center space-x-2">
             <span class="text-green-500 text-lg">👥</span>
             <span class="text-sm text-gray-700">Discord, GroupMe & IG community access</span>
-          </div>
+          </div> -->
           <div class="flex items-center space-x-2">
             <span class="text-green-500 text-lg">⭐</span>
             <span class="text-sm text-gray-700">Executive Board application eligibility</span>
           </div>
-          <div class="flex items-center space-x-2">
+          <!-- <div class="flex items-center space-x-2">
             <span class="text-green-500 text-lg">📜</span>
             <span class="text-sm text-gray-700">Official membership certificates</span>
-          </div>
+          </div> -->
         </div>
 
 
@@ -546,6 +546,25 @@
           <h3 class="text-2xl font-bold cc-blue-text mb-3">Existing Members & Hackathon Participants</h3>
         <p class="text-blue-700 mb-4">Get your certificates and community links instantly</p>
         </div>
+
+              <!-- Benefits List -->
+          <div class="mb-6 space-y-2"></div>
+          <div class="flex items-center space-x-2">
+            <span class="text-green-500 text-lg">👥</span>
+            <span class="text-sm text-gray-700">Discord, GroupMe & IG community access</span>
+          </div>
+
+          <div class="flex items-center space-x-2">
+            <span class="text-green-500 text-lg">📜</span>
+            <span class="text-sm text-gray-700">Official membership certificates</span>
+          </div>
+        </div>
+
+
+
+
+
+
 
         <!-- Certificate Generation Form -->
         <form class="space-y-4" id="cert-form" novalidate>
