--- a/hackathons-discord.html
+++ b/hackathons-discord.html
@@ -267,7 +267,7 @@
         <button
           id="download-certificate"
           type="button"
-          class="bg-green-600 hover:bg-green-700 text-white px-6 py-4 rounded-lg font-bold text-lg transition-all duration-300 transform hover:-translate-y-1 hover:shadow-lg flex items-center justify-center gap-3"
+          class="bg-amber-500 hover:bg-amber-600 text-white px-6 py-4 rounded-lg font-bold text-lg transition-all duration-300 transform hover:-translate-y-1 hover:shadow-lg flex items-center justify-center gap-3"
         >
           <i class="fas fa-download text-xl" aria-hidden="true"></i>
           Download Certificate
@@ -284,7 +284,39 @@
         </a>
         <a
           id="cert-groupme-link"
-          href="https://codecrunchglobal-groupme.vercel.app/"
+          href="https://hackuniversitygroupme.vercel.app/"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="bg-green-600 hover:bg-orange-600 text-white px-6 py-4 rounded-lg font-bold text-lg transition-all duration-300 transform hover:-translate-y-1 hover:shadow-lg flex items-center justify-center gap-3 text-decoration-none"
+        >
+          <i class="fas fa-users text-xl" aria-hidden="true"></i>
+          Join Code Crunch & Hackathon GroupMe
+        </a>
+      </div>
+
+       <!-- Main Action Buttons -->
+      <div class="grid md:grid-cols-3 gap-4 mb-8">
+        <button
+          id="download-certificate"
+          type="button"
+          class="bg-amber-500 hover:bg-amber-600 text-white px-6 py-4 rounded-lg font-bold text-lg transition-all duration-300 transform hover:-translate-y-1 hover:shadow-lg flex items-center justify-center gap-3"
+        >
+          <i class="fas fa-download text-xl" aria-hidden="true"></i>
+          Download Certificate
+        </button>
+        <a
+          id="cert-discord-link"
+          href="https://codecrunchglobal-discordserver.vercel.app/"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-4 rounded-lg font-bold text-lg transition-all duration-300 transform hover:-translate-y-1 hover:shadow-lg flex items-center justify-center gap-3 text-decoration-none"
+        >
+          <i class="fab fa-discord text-xl" aria-hidden="true"></i>
+          Join Code Crunch & Hackathon Discord 
+        </a>
+        <a
+          id="cert-groupme-link"
+          href="https://hackuniversitygroupme.vercel.app/"
           target="_blank"
           rel="noopener noreferrer"
           class="bg-green-600 hover:bg-orange-600 text-white px-6 py-4 rounded-lg font-bold text-lg transition-all duration-300 transform hover:-translate-y-1 hover:shadow-lg flex items-center justify-center gap-3 text-decoration-none"
@@ -303,7 +335,7 @@
             <h5 class="font-semibold text-gray-700 mb-2 text-sm">ColorStack at FIU</h5>
             <div class="flex gap-2 justify-center">
               <a
-                href="https://codecrunchglobal-discordserver.vercel.app/"
+                href="https://colorstackatfiu-discordserver.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-purple-600 hover:bg-purple-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -311,7 +343,7 @@
                 <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
               </a>
               <a
-                href="https://codecrunchglobal-discordserver.vercel.app/"
+                href="https://hackuniversitygroupme.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-blue-500 hover:bg-blue-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -326,7 +358,7 @@
             <h5 class="font-semibold text-gray-700 mb-2 text-sm">CAHSI at FIU</h5>
             <div class="flex gap-2 justify-center">
               <a
-                href="https://codecrunchglobal-discordserver.vercel.app/"
+                href="https://cahsiatfiu-discordserver.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-purple-600 hover:bg-teal-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -334,7 +366,7 @@
                 <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
               </a>
               <a
-                href="https://codecrunchglobal-discordserver.vercel.app/"
+                href="https://hackuniversitygroupme.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-blue-500 hover:bg-cyan-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -349,7 +381,7 @@
             <h5 class="font-semibold text-gray-700 mb-2 text-sm">GDG at FIU</h5>
             <div class="flex gap-2 justify-center">
               <a
-                href="https://codecrunchglobal-discordserver.vercel.app/"
+                href="https://gdgatfiu-discordserver.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-purple-600 hover:bg-red-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -357,7 +389,7 @@
                 <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
               </a>
               <a
-                href="https://codecrunchglobal-discordserver.vercel.app/"
+                href="https://hackuniversitygroupme.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-blue-500 hover:bg-green-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -380,7 +412,7 @@
                 <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
               </a>
               <a
-                href="https://codecrunchglobal-discordserver.vercel.app/"
+                href="https://hackuniversitygroupme.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-blue-500 hover:bg-rose-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
