--- a/home.html
+++ b/home.html
@@ -558,7 +558,7 @@
             <span class="text-green-500 text-lg">📜</span>
             <span class="text-sm text-gray-700">Official membership certificates</span>
           </div>
-        </div>
+       
 
 
 
@@ -619,7 +619,7 @@
         <button
           id="download-certificate"
           type="button"
-          class="bg-green-600 hover:bg-green-700 text-white px-6 py-4 rounded-lg font-bold text-lg transition-all duration-300 transform hover:-translate-y-1 hover:shadow-lg flex items-center justify-center gap-3"
+          class="bg-amber-500 hover:bg-amber-600 text-white px-6 py-4 rounded-lg font-bold text-lg transition-all duration-300 transform hover:-translate-y-1 hover:shadow-lg flex items-center justify-center gap-3"
         >
           <i class="fas fa-download text-xl" aria-hidden="true"></i>
           Download Certificate
@@ -636,7 +636,7 @@
         </a>
         <a
           id="cert-groupme-link"
-          href="https://codecrunchglobal-groupme.vercel.app/"
+          href="https://hackuniversitygroupme.vercel.app/"
           target="_blank"
           rel="noopener noreferrer"
           class="bg-green-600 hover:bg-orange-600 text-white px-6 py-4 rounded-lg font-bold text-lg transition-all duration-300 transform hover:-translate-y-1 hover:shadow-lg flex items-center justify-center gap-3 text-decoration-none"
@@ -655,7 +655,7 @@
             <h5 class="font-semibold text-gray-700 mb-2 text-sm">ColorStack at FIU</h5>
             <div class="flex gap-2 justify-center">
               <a
-                href="https://go.fiu.edu/colorstackatfiu"
+                href="https://colorstackatfiu-discordserver.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-purple-600 hover:bg-purple-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -663,7 +663,7 @@
                 <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
               </a>
               <a
-                href="https://go.fiu.edu/colorstackatfiu"
+                href="https://hackuniversitygroupme.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-blue-500 hover:bg-blue-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -678,7 +678,7 @@
             <h5 class="font-semibold text-gray-700 mb-2 text-sm">CAHSI at FIU</h5>
             <div class="flex gap-2 justify-center">
               <a
-                href="https://go.fiu.edu/cahsiatfiu"
+                href="https://cahsiatfiu-discordserver.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-purple-600 hover:bg-teal-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -686,7 +686,7 @@
                 <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
               </a>
               <a
-                href="https://go.fiu.edu/cahsiatfiu"
+                href="https://hackuniversitygroupme.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-blue-500 hover:bg-cyan-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -701,7 +701,7 @@
             <h5 class="font-semibold text-gray-700 mb-2 text-sm">GDG at FIU</h5>
             <div class="flex gap-2 justify-center">
               <a
-                href="#"
+                href="https://gdgatfiu-discordserver.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-purple-600 hover:bg-red-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -709,7 +709,7 @@
                 <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
               </a>
               <a
-                href="#"
+                href="https://hackuniversitygroupme.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-blue-500 hover:bg-green-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -724,7 +724,7 @@
             <h5 class="font-semibold text-gray-700 mb-2 text-sm">Raspberry Pi Code Crunch</h5>
             <div class="flex gap-2 justify-center">
               <a
-                href="#"
+                href="https://codecrunchglobal-discordserver.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-purple-600 hover:bg-pink-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
@@ -732,7 +732,7 @@
                 <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
               </a>
               <a
-                href="#"
+                href="https://hackuniversitygroupme.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bg-blue-500 hover:bg-rose-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
