--- a/hackathons-discord.html
+++ b/hackathons-discord.html
@@ -776,7 +776,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
 <!-- About Hack University Initiative Section -->
-<section class="py-16 bg-gradient-to-br from-blue-50 via-indigo-50 to-purple-50">
+<section class="py-16 bg-gradient-to-br from-blue-50 via-indigo-50 to-purple-50" id="mission">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="text-center mb-12">
       <h1 class="text-4xl font-bold mb-4 text-gray-900">
@@ -1047,35 +1047,35 @@ document.addEventListener("DOMContentLoaded", () => {
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="grid md:grid-cols-3 gap-8">
                     <div>
-                        <h3 class="text-lg font-bold mb-4">Code Crunch <span class="star">✨</span></h3>
+                        <h3 class="text-lg font-bold mb-4">Hack University <span class="star">✨</span></h3>
                         <p class="text-sm opacity-80">
-                            An interdisciplinary tech and innovation club empowering students through coding workshops, technical interview prep, and project-based learning. Open to high school students (16+), all majors, and any university worldwide.
+                            A collaborative effort uniting multiple student organizations and global communities with a mission to empower the next generation of innovators, developers, and leaders. 
                         </p>
                         <p class="text-sm mt-2">
-                            <a href="http://codecrunch.cs.fiu.edu" class="text-white underline hover:opacity-90">codecrunch.cs.fiu.edu</a>
+                            <a href="http://HackUniversity.vercel.app" class="text-white underline hover:opacity-90">HackUniversity.vercel.app</a>
                         </p>
                         
                         <!-- Social Media Links Grid -->
                         <div class="mt-6">
                             <h4 class="text-sm font-bold mb-3">Connect With Us:</h4>
                             <div class="grid grid-cols-3 gap-3">
-                                <a href="https://www.linkedin.com/company/code-crunch-club" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <a href="https://hackuniversity-directory.vercel.app/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fab fa-linkedin text-xl"></i>
                                     <span class="text-xs mt-1">LinkedIn</span>
                                 </a>
-                                <a href="https://www.instagram.com/codecrunchclub/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <a href="https://hackuniversity-directory.vercel.app/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fab fa-instagram text-xl"></i>
                                     <span class="text-xs mt-1">Instagram</span>
                                 </a>
-                                <a href="https://github.com/CODE-CRUNCH-CLUB" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <a href="https://hackuniversity-directory.vercel.app/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fab fa-github text-xl"></i>
                                     <span class="text-xs mt-1">GitHub</span>
                                 </a>
-                                <a href="https://www.youtube.com/@CODECRUNCH-CS-FIU-EDU" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <a href="https://hackuniversity-directory.vercel.app/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fab fa-youtube text-xl"></i>
                                     <span class="text-xs mt-1">YouTube</span>
                                 </a>
-                                <a href="https://fiu.campuslabs.com/engage/organization/codecrunch" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <a href="https://hackuniversity-directory.vercel.app/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fas fa-university text-xl"></i>
                                     <span class="text-xs mt-1 text-center">Panther Connect</span>
                                 </a>
@@ -1087,25 +1087,25 @@ document.addEventListener("DOMContentLoaded", () => {
                                     <i class="fas fa-users text-xl"></i>
                                     <span class="text-xs mt-1">GroupMe</span>
                                 </a>
-                                <a href="https://hack-university.vercel.app/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <a href="https://hackuniversity-directory.vercel.app/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fas fa-video text-xl"></i>
                                     <span class="text-xs mt-1">Zoom</span>
                                 </a>
-                                <a href="https://lu.ma/CODECRUNCH" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <a href="https://hackuniversity-directory.vercel.app/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="far fa-calendar-alt text-xl"></i>
-                                    <span class="text-xs mt-1 text-center">Event Calendar</span>
+                                    <span class="text-xs mt-1 text-center">Hack University Calendar</span>
                                 </a>
-                                <a href="https://app.epichire.com/clubs/809/invite?code=mXjh9s" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <!-- <a href="https://app.epichire.com/clubs/809/invite?code=mXjh9s" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fas fa-briefcase text-xl"></i>
                                     <span class="text-xs mt-1">EpicHire</span>
-                                </a>
-                                <a href="https://witty-suede-4a1.notion.site/ebd/1fe7f868cc8c8042b1ebfebc42034954" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                </a> -->
+                                <!-- <a href="https://hackuniversity-directory.vercel.app/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fas fa-book text-xl"></i>
                                     <span class="text-xs mt-1 text-center">Course Schedule</span>
-                                </a>
+                                </a> -->
                                 <a href="https://docs.google.com/forms/d/e/1FAIpQLScOA6IBnLxnxEnk-BOaXYyPXpJ3dU6Cu4OOrPJ7ErOgKvIdEQ/viewform?usp=dialog" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fas fa-clipboard-check text-xl"></i>
-                                    <span class="text-xs mt-1">Attendance</span>
+                                    <span class="text-xs mt-1">Hack University Attendance</span>
                                 </a>
                             </div>
                         </div>
@@ -1113,7 +1113,7 @@ document.addEventListener("DOMContentLoaded", () => {
                     <div>
                         <h3 class="text-lg font-bold mb-4">Quick Links</h3>
                         <ul class="space-y-2">
-                            <li><a href="https://codecrunchglobal.vercel.app/index.html#mission" class="text-sm opacity-80 hover:opacity-100">Mission</a></li>
+                            <li><a href="https://codecrunchglobal.vercel.app/hackathons-discord.html#mission" class="text-sm opacity-80 hover:opacity-100">Mission</a></li>
                             <li><a href="https://codecrunchglobal.vercel.app/index.html#events" class="text-sm opacity-80 hover:opacity-100">Events</a></li>
                             <li><a href="https://ba-00001.github.io/codecrunchclub/hackathons.html" class="text-sm opacity-80 hover:opacity-100">Hackathons</a></li>
                             <li><a href="https://codecrunchglobal.vercel.app/community-access.html" class="text-sm opacity-80 hover:opacity-100">Membership</a></li>
